--- a/SpikaEnterprise/res/layout/activity_location.xml
+++ b/SpikaEnterprise/res/layout/activity_location.xml
@@ -7,22 +7,33 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        class="com.google.android.gms.maps.MapFragment" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="#66000000"
         android:orientation="vertical"
         android:padding="10dp" >
 
-        <TextView
-            android:id="@+id/tvNameOfUserLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="25sp" />
-    </LinearLayout>
+        <com.clover.spika.enterprise.chat.views.RobotoThinEditText
+            android:id="@+id/locationAddress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/sendLocation"
+            android:textColor="@color/white" />
+
+        <ImageButton
+            android:id="@+id/sendLocation"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:scaleType="centerInside"
+            android:src="@android:drawable/ic_menu_send" />
+    </RelativeLayout>
 
 </RelativeLayout>
