--- a/SpikaEnterprise/res/layout/item_person.xml
+++ b/SpikaEnterprise/res/layout/item_person.xml
@@ -3,38 +3,60 @@
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:background="@color/transparent"
-    android:padding="10dp" >
+    android:background="@color/transparent" >
 
-    <com.clover.spika.enterprise.chat.views.RoundImageView
-        android:id="@+id/userImage"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:contentDescription="@null"
-        tools:background="#55ff0000" />
-
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/clickLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/userImage"
-        android:orientation="vertical" >
+        android:layout_marginLeft="5dp" >
 
-        <TextView
-            android:id="@+id/personName"
+        <RelativeLayout
+            android:id="@+id/imageLayout"
+            android:layout_width="65dp"
+            android:layout_height="85dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp" >
+
+            <com.clover.spika.enterprise.chat.views.RoundImageView
+                android:id="@+id/userImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@null" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/imageLayoutControl"
+            android:layout_toRightOf="@+id/imageLayout"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/personName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="pero" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/imageLayoutControl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="pero" />
-    </LinearLayout>
+            android:layout_alignBottom="@id/imageLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/imageLayout"
+            android:background="@drawable/icon_tablearrow" >
+        </RelativeLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
